need to fix Role

--- a/movie/pom.xml
+++ b/movie/pom.xml
@@ -8,7 +8,7 @@
         <version>2.5.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.softserveinc.illia.krasnienkov</groupId>
+    <groupId>com.illia.krasnienkov</groupId>
     <artifactId>movie</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>movie</name>
