--- a/movie/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/movie/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,1 +1,1 @@
-User.namedFindUserById = "SELECT * FROM userr WHERE user_id = :id "
+User.namedFindUserById = select * from userr u where u.id= unhex(:id);
