--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/movie
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.enabled=true
+
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
