fixed liquibase settings

--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:changelog-master.xml
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
