refactored code, created new ddl & dml, created new dao & service layer classes

--- a/movie/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/movie/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,1 +1,3 @@
 User.namedFindUserById = select * from userr u where u.id= unhex(:id);
+Movie.namedGetRandomMovie = select * from movie order by rand() limit 1;
+Movie.namedSortMoviesByRating = select * from movie order by rating desc;
