--- a/movie/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/movie/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,3 +1,23 @@
-User.namedFindUserById = select * from userr u where u.id= unhex(:id);
-Movie.namedGetRandomMovie = select * from movie order by rand() limit 1;
-Movie.namedSortMoviesByRating = select * from movie order by rating desc;
+User.namedFindUserById=select * from userr u where u.id= unhex(:id);
+Movie.namedGetRandomMovie=select * from movie order by rand() limit 1;
+Movie.namedSortMoviesByRating=select * from movie order by rating desc;
+Movie.namedGetAllMovieInfo=select m.name as movie_name, \
+m.description as description, \
+m.duration as duration, \
+m.rating as rating, \
+m.release_date as release_date, \
+g.name as genre_name, \
+c.full_name as country_name, \
+e.name as employee_name, \
+e.last_name as employee_last_name, \
+p.name as profession \
+from movie as m \
+inner join genre_to_movie as gtm on m.id = gtm.movie_id \
+inner join genre as g on gtm.genre_id = g.id \
+inner join country_to_movie as ctm on m.id = ctm.movie_id \
+inner join country as c on ctm.country_id = c.id \
+inner join employee_to_movie as etm on m.id = etm.movie_id \
+inner join employee as e on etm.employee_id = e.id \
+inner join profession_to_employee as pte on e.id = pte.employee_id \
+inner join profession as p on pte.profession_id = p.id \
+where m.id = :id
