--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://db:3306/movie?autoReconnect=true&useSSL=false
 #  ${SPRING_DATASOURCE_URL}:jdbc:mysql://localhost:3307/movie
 spring.datasource.username=admin
 #  ${SPRING_DATASOURCE_USERNAME}:root
-spring.datasource.password=root
+spring.datasource.password=pass
 #  ${SPRING_DATASOURCE_PASSWORD}:root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
