--- a/movie/src/main/resources/META-INF/jpa-named-queries.properties
+++ b/movie/src/main/resources/META-INF/jpa-named-queries.properties
@@ -1,16 +1,16 @@
 User.namedFindUserById=select * from userr u where u.id= unhex(:id);
 Movie.namedGetRandomMovie=select * from movie order by rand() limit 1;
 Movie.namedSortMoviesByRating=select * from movie order by rating desc;
-Movie.namedGetAllMovieInfo=select m.name as movie_name, \
+Movie.namedGetAllMovieInfo=select m.name as movieName, \
 m.description as description, \
 m.duration as duration, \
 m.rating as rating, \
-m.release_date as release_date, \
-g.name as genre_name, \
-c.full_name as country_name, \
-e.name as employee_name, \
-e.last_name as employee_last_name, \
-p.name as profession \
+m.release_date as releaseDate, \
+g.name as genreName, \
+c.full_name as countryName, \
+e.name as employeeName, \
+e.last_name as employeeLastName, \
+p.name as professionName \
 from movie as m \
 inner join genre_to_movie as gtm on m.id = gtm.movie_id \
 inner join genre as g on gtm.genre_id = g.id \
