--- a/movie/src/main/resources/liquibase.properties
+++ b/movie/src/main/resources/liquibase.properties
@@ -1,6 +1,6 @@
 changeLogFile = src/main/resources/changelog-master.xml
 driver=com.mysql.cj.jdbc.Driver
-url = jdbc:mysql://localhost:3307/movie
+url = jdbc:mysql://localhost:3307/movie?autoReconnect=true&useSSL=false
 username = root
 password = root
 verbose = true
