--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.datasource.url=jdbc:mysql://db:3306/movie?autoReconnect=true&useSSL=false
-#  ${SPRING_DATASOURCE_URL}:jdbc:mysql://localhost:3307/movie
-spring.datasource.username=admin
-#  ${SPRING_DATASOURCE_USERNAME}:root
-spring.datasource.password=pass
-#  ${SPRING_DATASOURCE_PASSWORD}:root
+spring.datasource.url=jdbc:mysql://localhost:3307/movie
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.liquibase.enabled=true
