--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
+
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
