--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,50 @@
     <modules>
         <module>FakeDataService</module>
         <module>movie</module>
+        <module>CsvParser</module>
+        <module>BeamTest</module>
     </modules>
+    <properties>
+        <java.version>11</java.version>
+        <log4j.version>2.11.2</log4j.version>
+        <spring-boot-starter-data-jpa.version>2.5.3</spring-boot-starter-data-jpa.version>
+        <spring-boot-starter-cache.version>2.5.4</spring-boot-starter-cache.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
