--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,12 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>movie</module>
+        <module>SpannerIntegration</module>
     </modules>
+
     <properties>
         <java.version>11</java.version>
-        <log4j.version>2.11.2</log4j.version>
+        <liquibase-core.version>4.4.3</liquibase-core.version>
     </properties>
 
 <dependencyManagement>
@@ -32,43 +34,39 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
-            <version>2.5.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>2.5.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <version>2.5.6</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.5.6</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
-            <version>2.5.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.4.3</version>
+            <version>${liquibase-core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-maven-plugin</artifactId>
-            <version>4.4.3</version>
+            <version>${liquibase-core.version}</version>
         </dependency>
 
     </dependencies>
