disabled tests for commonService, specified api-docs custom path

--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
 
-#springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.api-docs.path=/api-docs
