--- a/movie/pom.xml
+++ b/movie/pom.xml
@@ -11,6 +11,7 @@
         <groupId>com.illia.krasnienkov</groupId>
         <artifactId>Movie-service</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <properties>
