--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>movie</module>
-        <module>SpannerIntegration</module>
+<!--        <module>SpannerIntegration</module>-->
     </modules>
 
     <properties>
